adding tool for image upload

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                  <ul class="input-list">
                     <li class="list--items">
                         <input type="file" name="file" id="file" class="inputfile" />
-                        <label for="file"><em class="icon--holder"><img src="./img/icon--DL.svg">
+                        <label for="file"><em class="icon--holder"><img src="https://howtank-assets-fr.s3.eu-west-3.amazonaws.com/images/covid-19-assets/icon--DL.svg">
                             
 
 
@@ -46,7 +46,8 @@
             </div>
         </div>
         <button class="pdf--modifier-toggle">Modifier le PDF</button>
-        <a class="pdf--modifier-DL" href="https://howtank-assets-fr.s3.eu-west-3.amazonaws.com/images/covid-19-assets/d%C3%A9rogation_HTK_2.2.pdf">Télécharger le PDF</a>
+        <a class="pdf--modifier-DL pdf--modifier-DL-default" href="https://howtank-assets-fr.s3.eu-west-3.amazonaws.com/images/covid-19-assets/d%C3%A9rogation_HTK_2.2.pdf">Télécharger le PDF par défaut</a>
+        <a class="pdf--modifier-DL pdf--modifier-DL-custom " onclick="window.print()">Télécharger votre PDF</a>
     </header>
     <main>
         
