--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
                         </div>
 
                     </div>
-
+                    <img class="printed--img" src="https://howtank-assets-fr.s3.eu-west-3.amazonaws.com/images/covid-19-assets/pattern--exclamation.png">
                 </div>
 
             </section>
-        
+           
     </main>
     <div class="modal--wrapper">
         <div class="help--modal">
