reverting local image custom

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <button class="pdf--modifier-toggle ">Modifier le PDF</button>
         <a class="pdf--modifier-DL pdf--modifier-DL-default" href="https://howtank-assets-fr.s3.eu-west-3.amazonaws.com/images/covid-19-assets/d%C3%A9rogation_HTK_2.2.pdf">Télécharger le PDF par défaut</a>
         <a class="pdf--modifier-DL pdf--modifier-DL-custom " onclick="window.print()">Télécharger votre PDF</a>
+        <a class="papote--link" href="">Télécharger votre PDF</a>
     </header>
     <main>
         
